<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EpiAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="LogButton">Log in</string>
    <string name="string_log_label">Login</string>
    <string name="string_pwd_label">Password</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_section1">Login Screen</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Planning</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_profile2">Profile2</string>
    <string name="hello_world">Hello world!</string>
    <string name="description_photo">Profile_photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_msg">Connexion error</string>
    <string name="title_section4">Grades</string>
    <string name="LastWeek">last_week.png</string>
    <string name="nextWeek">nextWeek</string>

    <string name="Trombi">Trombi</string>
    <string name="Susie">Susie</string>

    <string name="corner_left_up">Corner_left_up</string>
    <string name="centre_horizontal">centre_horizontal</string>
    <string name="corner_right_up">corner_right_up</string>
    <string name="Project">Project</string>

</resources>
